.k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    description: RIMA
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: rima.sc.ude.systems
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web
            port:
              number: 8080
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /docs
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /swagger
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /assets
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /admin
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /reset-app-data
        backend:
          service:
            name: api
            port:
              number: 8080
  tls:
  - hosts:
    - rima.sc.ude.systems
    secretName: web-tls-crt
